--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,23 +37,28 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
+      # Setup Terraform
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.9.5
+
       # Terraform Init
       - name: Terraform Init
+        working-directory: ./infra
         run: |
-          cd infra
-          terraform init -backend-config="bucket=my-ecs-terraform-state" \
-                         -backend-config="key=ecs/terraform.tfstate" \
-                         -backend-config="region=${{ secrets.AWS_REGION }}"
+          terraform init \
+            -backend-config="bucket=my-ecs-terraform-state" \
+            -backend-config="key=ecs/terraform.tfstate" \
+            -backend-config="region=${{ secrets.AWS_REGION }}"
 
       # Terraform Plan
       - name: Terraform Plan
-        run: |
-          cd infra
-          terraform plan -var="image_url=${{ env.image }}"
+        working-directory: ./infra
+        run: terraform plan -var="image_url=${{ env.image }}"
 
       # Terraform Apply
       - name: Terraform Apply
-        run: |
-          cd infra
-          terraform apply -auto-approve -var="image_url=${{ env.image }}"
-
+        if: github.ref == 'refs/heads/main'
+        working-directory: ./infra
+        run: terraform apply -auto-approve -var="image_url=${{ env.image }}"
