--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Build, Tag, and Push Docker image
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }} .
+          docker build -t $ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }} ./app
           docker push $ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }}
 
       - name: Setup Terraform
