--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ${{ env.TF_WORKING_DIR }}
-        run: terraform plan -var "image_tag=${{ env.IMAGE_TAG }}"
+        run: terraform plan -var "image_tag=${{ env.IMAGE_TAG }}" -input=false -lock=false
 
       - name: Terraform Apply
         working-directory: ${{ env.TF_WORKING_DIR }}
