--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,8 +59,8 @@ jobs:
 
       - name: Terraform Plan
         working-directory: ${{ env.TF_WORKING_DIR }}
-        run: terraform plan -var "image_tag=${{ env.IMAGE_TAG }}" -input=false -lock=false
+        run: terraform plan -var "docker_image_tag=${{ env.IMAGE_TAG }}" -input=false -lock=false
 
       - name: Terraform Apply
         working-directory: ${{ env.TF_WORKING_DIR }}
-        run: terraform apply -auto-approve -var "image_tag=${{ env.IMAGE_TAG }}"
+        run: terraform apply -auto-approve -var "docker_image_tag=${{ env.IMAGE_TAG }}"
